chore: snapshot current competition source and assets